class="lazy-load" loading="lazy"

--- a/aboutus.html
+++ b/aboutus.html
@@ -172,40 +172,40 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="row g-4">
             <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage01.jpg" alt="1F 照片1"></div>
+                <div class="env-card-img"><img src="images/allage01.jpg" alt="1F 照片1" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">診所外觀</div>
               </div>
             </div>
             <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage02.jpg" alt="1F 照片2"></div>
+                <div class="env-card-img"><img src="images/allage02.jpg" alt="1F 照片2" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">大廳候診區</div>
               </div>
             </div>
             <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage_door.jpg" alt="1F 照片2"></div>
+                <div class="env-card-img"><img src="images/allage_door.jpg" alt="1F 照片2" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">大廳候診區</div>
               </div>
             </div>
 
             <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage1.jpg" alt="1F 照片2"></div>
+                <div class="env-card-img"><img src="images/allage1.jpg" alt="1F 照片2" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">候診區</div>
               </div>
             </div>
 
             <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage2.jpg" alt="1F 照片2"></div>
+                <div class="env-card-img"><img src="images/allage2.jpg" alt="1F 照片2" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">候診區</div>
               </div>
             </div>
 
             <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage4.jpg" alt="1F 照片2"></div>
+                <div class="env-card-img"><img src="images/allage4.jpg" alt="1F 照片2" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">門診區</div>
               </div>
             </div>
@@ -217,20 +217,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="row g-4">
             <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage6.jpg" alt="3F 照片1"></div>
+                <div class="env-card-img"><img src="images/allage6.jpg" alt="3F 照片1" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">復健室 1</div>
               </div>
             </div>  
 
              <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage66.jpg" alt="3F 照片1"></div>
+                <div class="env-card-img"><img src="images/allage66.jpg" alt="3F 照片1" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">復健室 2</div>
               </div>
             </div>
             <div class="col-md-4 col-sm-6">    
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage08.jpg" alt="3F 照片1"></div>
+                <div class="env-card-img"><img src="images/allage08.jpg" alt="3F 照片1" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">復健室 3</div>
               </div>
             </div>
@@ -243,21 +243,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
             <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage7.jpg" alt="4F 照片1"></div>
+                <div class="env-card-img"><img src="images/allage7.jpg" alt="4F 照片1" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">會議室</div>
               </div>
             </div>
 
             <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage8.jpg" alt="4F 照片1"></div>
+                <div class="env-card-img"><img src="images/allage8.jpg" alt="4F 照片1" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">會議室</div>
               </div>
             </div>
 
             <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage9.jpg" alt="4F 照片1"></div>
+                <div class="env-card-img"><img src="images/allage9.jpg" alt="4F 照片1" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">會議室</div>
               </div>
             </div>
@@ -269,7 +269,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="row g-4">
             <div class="col-md-4 col-sm-6">
               <div class="env-card">
-                <div class="env-card-img"><img src="images/allage10.jpg" alt="5F 照片1"></div>
+                <div class="env-card-img"><img src="images/allage10.jpg" alt="5F 照片1" class="lazy-load" loading="lazy"></div>
                 <div class="env-card-caption">X光檢查室</div>
               </div>
             </div>
