--- a/health-Edu.html
+++ b/health-Edu.html
@@ -169,6 +169,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 }
 
+.list-unstyled li {
+  margin-left: 18%;
+}
+
 </style>
   </head>
   <body>
