--- a/contact.html
+++ b/contact.html
@@ -199,7 +199,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <li><a class="dropdown-item" href="index.html#doctor">醫師介紹</a></li>          
                 <li><a class="dropdown-item" href="./index.html#traffic">交通資訊</a></li>
                 <!-- <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">掛號資訊</a></li> -->
+               <li><a class="dropdown-item" href="#">掛號資訊</a></li> -->
               </ul>
             </li>
             <li class="nav-item">
@@ -207,6 +207,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">聯絡我們</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href='https://line.me/ti/p/pyzvr4VGHa'><img src="./images/line.png" width="30" alt="加LINE"></a>
             </li>
           </ul>
         </div>
