--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <li class="nav-item">
               <a class="nav-link" href="contact.html">聯絡我們</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href='https://line.me/ti/p/pyzvr4VGHa'><img src="./images/line.png" width="30" alt="加LINE"></a>
+            </li>
           </ul>
         </div>
       </div>
