加官方LINE優化

--- a/aboutus.html
+++ b/aboutus.html
@@ -126,7 +126,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a class="nav-link" href="contact.html">聯絡我們</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href='https://line.me/ti/p/pyzvr4VGHa'><img src="./images/line.png" width="30" alt="加LINE"></a>
+              <a class="nav-link" href='https://line.me/R/ti/p/@541gnnsz'><img src="./images/line.png" width="30" alt="加LINE"></a>
             </li>
           </ul>
         </div>
