--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a class="nav-link" href="contact.html">聯絡我們</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href='https://line.me/ti/p/pyzvr4VGHa'><img src="./images/line.png" width="30" alt="加LINE"></a>
+              <a class="nav-link" href='https://line.me/ti/p/pyzvr4VGHa'><img src="./images/line.png" width="30" alt="加官方LINE"></a>
             </li>
           </ul>
         </div>
@@ -452,7 +452,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="row mt-4">
           <div class="col-12 text-center">
-            <a href="contact.html" class="btn btn-primary btn-lg">前往聯絡我們頁面</a>
+            <button class="btn btn-success btn-lg mb-5" alt="加LINE" onclick="window.location.href='https://line.me/ti/p/pyzvr4VGHa'">加官方LINE</button>
           </div>
         </div>
       </div>
