--- a/contact.html
+++ b/contact.html
@@ -227,7 +227,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div>
               <div class="card-body">
                 <p class="lead mb-4">如有任何問題或預約需求，歡迎填寫下方表單，將使用您的郵件客戶端發送訊息給我們，我們將盡快回覆您。</p>
-                <form id="contactForm" class="contact-form" action="https://formspree.io/f/xldlrlln" method="POST">
+                <form id="contactForm" class="contact-form" action="https://formspree.io/f/mdaakgwq" method="POST">
                   <div class="row">
                     <div class="col-md-4 mb-3 ">
                       <label for="name" class="form-label">姓名 <span class="text-danger">*</span></label>
