--- a/index.html
+++ b/index.html
@@ -260,6 +260,88 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </section>
 
+<section class="sect3">
+  <div class="container">
+    <div class="products-sect">
+      <div class="sect-title">
+        <span>our projects</span>
+        <h2>自費產品&診療項目</h2>
+      </div>
+
+      <a href="/products/all/1" class="btn more" aria-label="See more projects">
+        <i></i>
+      </a>
+
+      <ul class="products-list">
+        <li class="item">
+          <article class="box new">
+            <div class="pic-box">
+              <img src="./images/herpes-zoster-vaccine.jpg" alt="療程名稱" loading="lazy">
+            </div>
+
+            <div class="txt">
+              <h3 class="name">帶狀皰疹</h3>
+              <div class="line"></div>
+              <!-- <p class="description">一段摘要，最多三行，hover 才完整顯示。</p> -->
+            </div>
+
+            <!-- <a class="cover" href="YOUR_LINK" aria-label="前往療程頁"></a> -->
+          </article>
+        </li>
+
+        <li class="item">
+          <article class="box new">
+            <div class="pic-box">
+              <img src="./images/hpv.jpg" alt="療程名稱" loading="lazy">
+            </div>
+
+            <div class="txt">
+              <h3 class="name">HPV疫苗</h3>
+              <div class="line"></div>
+              <!-- <p class="description">一段摘要，最多三行，hover 才完整顯示。</p> -->
+            </div>
+
+            <!-- <a class="cover" href="YOUR_LINK" aria-label="前往療程頁"></a> -->
+          </article>
+        </li>
+
+        <li class="item">
+          <article class="box new">
+            <div class="pic-box">
+              <img src="./images/u-relax-feminine-probiotic.jpg" alt="療程名稱" loading="lazy">
+            </div>
+
+            <div class="txt">
+              <h3 class="name">優芮珂絲</h3>
+              <div class="line"></div>
+              <!-- <p class="description">一段摘要，最多三行，hover 才完整顯示。</p> -->
+            </div>
+
+            <!-- <a class="cover" href="YOUR_LINK" aria-label="前往療程頁"></a> -->
+          </article>
+        </li>
+
+        <li class="item">
+          <article class="box new">
+            <div class="pic-box">
+              <img src="./images/prp.jpg" alt="療程名稱" loading="lazy">
+            </div>
+
+            <div class="txt">
+              <h3 class="name">PRP</h3>
+              <div class="line"></div>
+              <!-- <p class="description">一段摘要，最多三行，hover 才完整顯示。</p> -->
+            </div>
+
+            <!-- <a class="cover" href="YOUR_LINK" aria-label="前往療程頁"></a> -->
+          </article>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+
 
     <!-- 門診時間表 -->
     <section id="weekfrom">
