--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <h2>自費產品&診療項目</h2>
       </div>
 
-      <a href="/products/all/1" class="btn more" aria-label="See more projects">
+      <a href="#" class="btn more" aria-label="See more projects">
         <i></i>
       </a>
 
