--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="products-sect">
       <div class="sect-title">
         <span>our projects</span>
-        <h2>自費產品&診療項目</h2>
+        <h2>自費項目&保健品</h2>
       </div>
 
       <a href="#" class="btn more" aria-label="See more projects">
