--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <li class="item">
           <article class="box new">
             <div class="pic-box">
-              <img src="./images/hpv.jpg" alt="療程名稱" loading="lazy">
+              <img src="./images/hpv-vaccine.jpg" alt="療程名稱" loading="lazy">
             </div>
 
             <div class="txt">
