--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <h4><i class="bi bi-envelope-fill me-2"></i>聯繫我們</h4>
               </div>
               <div class="card-body">
-                <p class="lead mb-4">如有任何問題或預約需求，歡迎填寫下方表單，將使用您的郵件客戶端發送訊息給我們，我們將盡快回覆您。</p>
+                <p class="lead mb-4">送出後我們將儘快回覆，實際回覆時間依業務狀況為準。</p>
                 <form id="contactForm" class="contact-form" action="https://formspree.io/f/mdaakgwq" method="POST">
                   <div class="row">
                     <div class="col-md-4 mb-3 ">
@@ -253,7 +253,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                   <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="privacy" required>
-                    <label class="form-check-label" for="privacy">我同意隱私權政策並同意診所處理我的個人資料 <span class="text-danger">*</span></label>
+                    <label class="form-check-label" for="privacy">我同意隱私權政策並同意本單位處理我的個人資料 <span class="text-danger">*</span></label>
                   </div>
                   <div class="text-center">
                     <button type="submit" class="btn btn-primary px-5">送出訊息</button>
