--- a/index.html
+++ b/index.html
@@ -263,9 +263,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <section class="sect3">
   <div class="container">
     <div class="products-sect">
-      <div class="sect-title">
-        <span>our projects</span>
-      </div>
+      <!-- <div class="sect-title">
+      </div> -->
 
       <a href="#" class="btn more" aria-label="See more projects">
         <i></i>
